--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
-        password: ${{ secrets.PYPI_TEST_TOKEN }}
+        password: ${{ secrets.PYPI_TEST_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
         
     - name: Publish distribution 📦 to PyPI
