--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,4 +24,6 @@ jobs:
       - uses: astral-sh/ruff-action@v1
         with:
           args: check
-          src: ["fireplan", "tests"]
+          src: 
+            - "fireplan"
+            - "tests"
